[gd_scene load_steps=8 format=3 uid="uid://cyacsk53tfihk"]

[ext_resource type="Script" uid="uid://cmeplptcnct3n" path="res://UI/menu_upgrade.gd" id="1_56d15"]
[ext_resource type="Texture2D" uid="uid://dbk5jfdkxlnyb" path="res://images/heavy.png" id="2_2tc4k"]
[ext_resource type="PackedScene" uid="uid://cj3kkhtadmxrv" path="res://UI/stats_panel.tscn" id="3_60wun"]
[ext_resource type="Texture2D" uid="uid://ygc46253hamc" path="res://images/scout.png" id="3_yruxc"]
[ext_resource type="Texture2D" uid="uid://df60u1a7y7m8y" path="res://images/wizard.png" id="4_60wun"]
[ext_resource type="PackedScene" uid="uid://blk6i2nnvv4sq" path="res://UI/ability_panel.tscn" id="4_ryhlo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xsur3"]
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="MenuUpgrade" type="CanvasLayer"]
script = ExtResource("1_56d15")

[node name="UpgradeMargin" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -94.0
offset_right = 135.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="UpgradePanel" type="PanelContainer" parent="UpgradeMargin"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xsur3")

[node name="UpgradeHBoxMargin" type="MarginContainer" parent="UpgradeMargin/UpgradePanel"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 15

[node name="UpgradeVBox" type="VBoxContainer" parent="UpgradeMargin/UpgradePanel/UpgradeHBoxMargin"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="CharHBox" type="HBoxContainer" parent="UpgradeMargin/UpgradePanel/UpgradeHBoxMargin/UpgradeVBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PortraitPanel" type="PanelContainer" parent="UpgradeMargin/UpgradePanel/UpgradeHBoxMargin/UpgradeVBox/CharHBox"]
layout_mode = 2

[node name="PortraitMargin" type="MarginContainer" parent="UpgradeMargin/UpgradePanel/UpgradeHBoxMargin/UpgradeVBox/CharHBox/PortraitPanel"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Portrait" type="TextureRect" parent="UpgradeMargin/UpgradePanel/UpgradeHBoxMargin/UpgradeVBox/CharHBox/PortraitPanel/PortraitMargin"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("2_2tc4k")
expand_mode = 2

[node name="StatsPanel" parent="UpgradeMargin/UpgradePanel/UpgradeHBoxMargin/UpgradeVBox/CharHBox" instance=ExtResource("3_60wun")]
layout_mode = 2

[node name="AbilityPanel0" parent="UpgradeMargin/UpgradePanel/UpgradeHBoxMargin/UpgradeVBox/CharHBox" instance=ExtResource("4_ryhlo")]
layout_mode = 2
ability_text = "More Range on
Big Drill"
ability_name = "more_big_drill"
ability_cost = 20
ability_tooltip = "An extra tile of range,
so allies which are further
away will also be brought
down to the next level."

[node name="AbilityPanel1" parent="UpgradeMargin/UpgradePanel/UpgradeHBoxMargin/UpgradeVBox/CharHBox" instance=ExtResource("4_ryhlo")]
layout_mode = 2
ability_text = "Bigger Drill
Smash Area"
ability_name = "more_drill_smash"
ability_cost = 20
ability_tooltip = "An extra tile of range,
so allies which are furhter
away will also be brought
down to the next level."

[node name="AbilityPanel2" parent="UpgradeMargin/UpgradePanel/UpgradeHBoxMargin/UpgradeVBox/CharHBox" instance=ExtResource("4_ryhlo")]
layout_mode = 2
ability_text = "Charge Attack"
ability_name = "charge_attack"
ability_cost = 20
ability_tooltip = "Charge in a straight line towards an enemy and knock them back."

[node name="CharHBox2" type="HBoxContainer" parent="UpgradeMargin/UpgradePanel/UpgradeHBoxMargin/UpgradeVBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PortraitPanel" type="PanelContainer" parent="UpgradeMargin/UpgradePanel/UpgradeHBoxMargin/UpgradeVBox/CharHBox2"]
layout_mode = 2

[node name="PortraitMargin" type="MarginContainer" parent="UpgradeMargin/UpgradePanel/UpgradeHBoxMargin/UpgradeVBox/CharHBox2/PortraitPanel"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Portrait" type="TextureRect" parent="UpgradeMargin/UpgradePanel/UpgradeHBoxMargin/UpgradeVBox/CharHBox2/PortraitPanel/PortraitMargin"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("3_yruxc")
expand_mode = 2

[node name="StatsPanel" parent="UpgradeMargin/UpgradePanel/UpgradeHBoxMargin/UpgradeVBox/CharHBox2" instance=ExtResource("3_60wun")]
layout_mode = 2

[node name="AbilityPanel3" parent="UpgradeMargin/UpgradePanel/UpgradeHBoxMargin/UpgradeVBox/CharHBox2" instance=ExtResource("4_ryhlo")]
layout_mode = 2
ability_text = "Penetrating Shot"
ability_name = "penetrating_quick_shot"
ability_cost = 20
ability_tooltip = "The quick shot ability
will now penetrate through enemies."

[node name="AbilityPanel4" parent="UpgradeMargin/UpgradePanel/UpgradeHBoxMargin/UpgradeVBox/CharHBox2" instance=ExtResource("4_ryhlo")]
layout_mode = 2
ability_text = "Stay Cloaked
When Attacking"
ability_name = "stay_cloaked"
ability_cost = 20
ability_tooltip = "The cloak ability will not be broken when attacking."

[node name="AbilityPanel5" parent="UpgradeMargin/UpgradePanel/UpgradeHBoxMargin/UpgradeVBox/CharHBox2" instance=ExtResource("4_ryhlo")]
layout_mode = 2
ability_text = "Emergency
Teleport"
ability_name = "emergency_teleport"
ability_cost = 20
ability_tooltip = "Teleport to a random other location on the map to evade danger (hopefully)."

[node name="CharHBox3" type="HBoxContainer" parent="UpgradeMargin/UpgradePanel/UpgradeHBoxMargin/UpgradeVBox"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="PortraitPanel" type="PanelContainer" parent="UpgradeMargin/UpgradePanel/UpgradeHBoxMargin/UpgradeVBox/CharHBox3"]
layout_mode = 2

[node name="PortraitMargin" type="MarginContainer" parent="UpgradeMargin/UpgradePanel/UpgradeHBoxMargin/UpgradeVBox/CharHBox3/PortraitPanel"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Portrait" type="TextureRect" parent="UpgradeMargin/UpgradePanel/UpgradeHBoxMargin/UpgradeVBox/CharHBox3/PortraitPanel/PortraitMargin"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("4_60wun")
expand_mode = 2

[node name="StatsPanel" parent="UpgradeMargin/UpgradePanel/UpgradeHBoxMargin/UpgradeVBox/CharHBox3" instance=ExtResource("3_60wun")]
layout_mode = 2

[node name="AbilityPanel3" parent="UpgradeMargin/UpgradePanel/UpgradeHBoxMargin/UpgradeVBox/CharHBox3" instance=ExtResource("4_ryhlo")]
layout_mode = 2
ability_text = "Healing Splash"
ability_name = "healing_aoe"
ability_cost = 20
ability_tooltip = "Area-of-effect minor healing"

[node name="AbilityPanel4" parent="UpgradeMargin/UpgradePanel/UpgradeHBoxMargin/UpgradeVBox/CharHBox3" instance=ExtResource("4_ryhlo")]
layout_mode = 2
ability_text = "Freeze Zone"
ability_name = "freeze_aoe"
ability_cost = 20
ability_tooltip = "Area-of-effect freeze spell"

[node name="AbilityPanel5" parent="UpgradeMargin/UpgradePanel/UpgradeHBoxMargin/UpgradeVBox/CharHBox3" instance=ExtResource("4_ryhlo")]
layout_mode = 2
ability_text = "Poison Cloud"
ability_name = "poison_aoe"
ability_cost = 20
ability_tooltip = "Area-of-effect poison ability"

[node name="ExitMargin" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -70.0
offset_bottom = 70.0
grow_horizontal = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ExitButton" type="Button" parent="ExitMargin"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.870588, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "X"

[connection signal="pressed" from="ExitMargin/ExitButton" to="." method="_on_exit_button_pressed"]
